# NotYouAre

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  build.sh  clear.sh  generate_code_coverage.sh  requirements_ubuntu.sh  run.sh  test.sh
include/: NotYouAre.hpp
src/: CMakeLists.txt  Main.cpp  NotYouAre.cpp
tests/: CMakeLists.txt  CheckOutput.hpp  NotYouAreTests.cpp
